# life-map

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.sbt  configuration.yaml  sonar-project.properties
.github/workflows/: deploy.yml  rust.yml
.sqlx/: query-57dce9f899d19d8de19639eb98b8ce4138d912c63c74c984a1c65eb1783a50ef.json
config/: base.yaml
migrations/: 20251004144109_create_tasks_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/domain/: new_task.rs  task_description.rs  task_title.rs
src/main/resources/db/migration/: V1__create_tasks.sql
src/main/scala/com/lifemap/: Main.scala
src/main/scala/cz/dusanrychnovsky/lifemap/: Main.scala
src/main/scala/cz/dusanrychnovsky/lifemap/db/: Database.scala  DotEnv.scala
src/main/scala/cz/dusanrychnovsky/lifemap/model/: Task.scala
src/main/scala/cz/dusanrychnovsky/lifemap/repository/: TaskRepository.scala
src/main/scala/cz/dusanrychnovsky/lifemap/routes/: TaskRoutes.scala
src/main/scala/cz/dusanrychnovsky/lifemap/tasks/: Task.scala  TaskRepository.scala  TaskRoutes.scala
src/routes/: tasks.rs
src/test/scala/com/lifemap/: HelloIntegrationSpec.scala  HelloRouteSpec.scala
src/test/scala/cz/dusanrychnovsky/lifemap/repository/: TaskRepositorySpec.scala
src/test/scala/cz/dusanrychnovsky/lifemap/routes/: TaskRoutesIntegrationSpec.scala  TaskRoutesSpec.scala
src/test/scala/cz/dusanrychnovsky/lifemap/tasks/: PostgresTestSupport.scala  TaskRoutesSpec.scala  (+2 more)
tests/: health_check.rs
